--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,6 +10,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.0.0",
     "drizzle-orm": "^0.45.1",
     "jose": "^6.1.3",
