chore: add git hooks for formatting and type checking
Set up husky + lint-staged + prettier to run on pre-commit:
- Format staged files with prettier
- Run typecheck across the monorepo

Also formats all existing files to match prettier config.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "dev": "pnpm --parallel --filter cli --filter api dev",
     "db:generate": "pnpm --filter api db:generate",
     "db:migrate": "pnpm --filter api db:migrate",
-    "db:studio": "pnpm --filter api db:studio"
+    "db:studio": "pnpm --filter api db:studio",
+    "typecheck": "bun x tsc --build --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,md}": "prettier --write"
+  },
+  "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4"
   }
 }
