--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "types": ["@types/bun"]
+    "rootDir": ".",
+    "types": ["bun-types"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "drizzle.config.ts"]
 }
