--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: ink-starter
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d ink-starter"]
+      test: ['CMD-SHELL', 'pg_isready -U user -d ink-starter']
       interval: 10s
       timeout: 5s
       retries: 5
