--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,24 +2,28 @@
   "name": "api",
   "version": "0.0.1",
   "type": "module",
+  "exports": {
+    "./router": "./src/router.ts",
+    "./types": "./src/types.ts",
+    "./trpc": "./src/trpc.ts",
+    "./utils/jwt": "./src/utils/jwt.ts"
+  },
   "scripts": {
     "dev": "bun --watch src/index.ts",
     "build": "bun build src/index.ts --outdir dist --target bun",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "bun src/db/migrate.ts",
-    "db:studio": "drizzle-kit studio"
+    "test": "bun test"
   },
   "dependencies": {
+    "@ink-starter/db": "workspace:*",
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.0.0",
-    "drizzle-orm": "^0.45.1",
     "jose": "^6.1.3",
-    "postgres": "^3.4.5",
+    "superjson": "^2.2.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "drizzle-kit": "^0.31.8",
+    "testcontainers": "^11.11.0",
     "typescript": "^5.7.2"
   }
 }
