--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,14 +12,18 @@
   },
   "dependencies": {
     "@trpc/client": "^11.8.1",
+    "api": "workspace:*",
+    "chalk": "^5.6.2",
     "ink": "^5.0.1",
     "ink-select-input": "^6.2.0",
     "ink-text-input": "^6.0.0",
     "jose": "^6.1.3",
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "superjson": "^2.2.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
+    "bun-types": "latest",
     "typescript": "^5.7.2"
   }
 }
