--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "drizzle-orm": "^0.45.1",
+    "postgres": "^3.4.5",
     "testcontainers": "^11.11.0",
     "typescript": "^5.7.2"
   }
