--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/ink-starter
+DATABASE_URL=postgresql://user:password@localhost:5432/shippr
 PORT=8080
 JWT_SECRET=i-am-not-a-secret
