--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,6 @@
   "type": "module",
   "exports": {
     "./router": "./src/router.ts",
-    "./types": "./src/types.ts",
     "./trpc": "./src/trpc.ts",
     "./utils/jwt": "./src/utils/jwt.ts"
   },
@@ -14,7 +13,7 @@
     "test": "bun test"
   },
   "dependencies": {
-    "@ink-starter/db": "workspace:*",
+    "@shippr/db": "workspace:*",
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.0.0",
     "jose": "^6.1.3",
