chore: add project todos and refactor package naming
- Add todos.md with roadmap (testing, auth, CI/CD)
- Update CLAUDE.md to reference todos.md
- Rename packages to scoped names (@shippr/api, @calumpwebb/shippr)
- Add @shippr/shared package with JwtPayload type
- Fix logo spacing in LogoNeon component
- Add occasional extra delay in tRPC logger for dev simulation

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "cli": "pnpm --filter cli dev",
-    "api": "pnpm --filter api dev",
-    "dev": "pnpm --parallel --filter cli --filter api dev",
+    "cli": "pnpm --filter @calumpwebb/shippr dev",
+    "api": "pnpm --filter @shippr/api dev",
+    "dev": "pnpm --parallel --filter @calumpwebb/shippr --filter @shippr/api dev",
     "db:generate": "pnpm --filter @shippr/db db:generate",
     "db:migrate": "pnpm --filter @shippr/db db:migrate",
     "db:studio": "pnpm --filter @shippr/db db:studio",
