--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,12 +14,14 @@
     "compile": "bun build src/index.tsx --compile --outfile shippr"
   },
   "dependencies": {
+    "@shippr/shared": "workspace:*",
     "@trpc/client": "^11.8.1",
     "chalk": "^5.6.2",
     "ink": "^5.0.1",
     "ink-select-input": "^6.2.0",
     "ink-text-input": "^6.0.0",
     "jose": "^6.1.3",
+    "pino": "^10.1.0",
     "react": "^18.3.1",
     "superjson": "^2.2.6"
   },
