--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,6 +14,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@shippr/shared": "workspace:*",
     "drizzle-orm": "^0.45.1",
     "postgres": "^3.4.5"
   },
