--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,11 +4,16 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./types": "./src/types.ts"
+    "./types": "./src/types.ts",
+    "./env": "./src/env.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "bun-types": "latest",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "find-up": "^8.0.0",
+    "zod": "^3.25.76"
   }
 }
