refactor: move apps to apps/, add context-based DI for tRPC
- Move api and cli from packages/ to apps/ directory
- Replace factory-based DI with context-based DI for tRPC
- Add JwtService to encapsulate JWT operations (no raw secrets on ctx)
- Context now provides db and jwt services to all procedures
- Routers are now plain objects instead of factory functions

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "exports": {
     "./router": "./src/router.ts",
-    "./trpc": "./src/trpc.ts",
-    "./utils/jwt": "./src/utils/jwt.ts"
+    "./trpc": "./src/trpc.ts"
   },
   "scripts": {
     "dev": "bun --watch src/index.ts",
