--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,15 +5,14 @@
   "exports": {
     ".": "./src/index.ts",
     "./types": "./src/types.ts",
-    "./env": "./src/env.ts"
+    "./jwt": "./src/jwt.ts"
+  },
+  "dependencies": {
+    "jose": "^6.1.3"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "bun-types": "latest",
     "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "find-up": "^8.0.0",
-    "zod": "^3.25.76"
   }
 }
