refactor: reorganize monorepo to packages/apps and packages/lib
- Move apps/cli and apps/api to packages/apps/
- Move packages/db and packages/shared to packages/lib/
- Update pnpm-workspace.yaml for new structure
- Update tsconfig.json project references
- Fix tsconfig extends paths in all packages
- Add missing bun-types to api package
- Update CLAUDE.md documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
   },
   "files": [],
   "references": [
-    { "path": "./packages/db" },
-    { "path": "./packages/shared" },
-    { "path": "./apps/api" },
-    { "path": "./apps/cli" }
+    { "path": "./packages/lib/db" },
+    { "path": "./packages/lib/shared" },
+    { "path": "./packages/apps/api" },
+    { "path": "./packages/apps/cli" }
   ]
 }
