--- a/packages/apps/api/package.json
+++ b/packages/apps/api/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "bun-types": "latest",
     "drizzle-orm": "^0.45.1",
     "postgres": "^3.4.5",
     "testcontainers": "^11.11.0",
