chore: remove unused .env.test file

--- a/packages/apps/api/.env.example
+++ b/packages/apps/api/.env.example
@@ -1,3 +1,6 @@
+ENVIRONMENT=local
+LOG_LEVEL=info
+
 DATABASE_URL=postgresql://user:password@localhost:5432/shippr
 PORT=8080
-JWT_SECRET=i-am-not-a-secret
+JWT_SECRET=your-secret-here-must-be-at-least-32-chars
