fix(ci): use Node.js 24 for npm OIDC trusted publishing

--- a/packages/apps/cli/.releaserc.json
+++ b/packages/apps/cli/.releaserc.json
@@ -15,7 +15,12 @@
         "prepareCmd": "pnpm build"
       }
     ],
-    "@semantic-release/npm",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": true
+      }
+    ],
     [
       "@semantic-release/git",
       {
