--- a/packages/apps/cli/package.json
+++ b/packages/apps/cli/package.json
@@ -10,6 +10,10 @@
   "homepage": "https://github.com/calumpwebb/shippr#readme",
   "bugs": "https://github.com/calumpwebb/shippr/issues",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
   "type": "module",
   "bin": {
     "shippr": "dist/index.js"
