--- a/packages/apps/cli/package.json
+++ b/packages/apps/cli/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@trpc/client": "^11.8.1",
+    "zod": "^3.24.1",
     "chalk": "^5.6.2",
     "ink": "^5.0.1",
     "ink-select-input": "^6.2.0",
